--- a/LFProject/LF.SerialCommunication.Project/App.xaml
+++ b/LFProject/LF.SerialCommunication.Project/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:LF.SerialCommunication.Project"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Color.xaml" />
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Button.xaml" />
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/GroupBox.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
