设计了串口通信的界面

--- a/LFProject/LF.SerialCommunication.Project/App.xaml
+++ b/LFProject/LF.SerialCommunication.Project/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Color.xaml" />
-                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Button.xaml" />
+                <!--<ResourceDictionary Source="/LF.WPFStyle;component/Styles/Button.xaml" />-->
                 <ResourceDictionary Source="/LF.WPFStyle;component/Styles/GroupBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
