完善串口助手的界面和功能绑定

--- a/LFProject/LF.SerialCommunication.Project/App.xaml
+++ b/LFProject/LF.SerialCommunication.Project/App.xaml
@@ -7,8 +7,10 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Color.xaml" />
-                <!--<ResourceDictionary Source="/LF.WPFStyle;component/Styles/Button.xaml" />-->
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/Button.xaml" />
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/ComboBox.xaml" />
                 <ResourceDictionary Source="/LF.WPFStyle;component/Styles/GroupBox.xaml" />
+                <ResourceDictionary Source="/LF.WPFStyle;component/Styles/TextBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
