--- a/LFProject/Libraries/LF.WPFStyle/Styles/Button.xaml
+++ b/LFProject/Libraries/LF.WPFStyle/Styles/Button.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Button">
         <Setter Property="Width" Value="auto"/>
-        <Setter Property="MinHeight" Value="22"/>
+        <Setter Property="MinHeight" Value="24"/>
         <Setter Property="Cursor" Value="Hand"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
         <Setter Property="Template">
@@ -11,7 +11,7 @@
                     <Grid>
                         <Border x:Name="border" BorderThickness="0" BorderBrush="{StaticResource MainColor}" Background="{StaticResource MainColor}">
                             <TextBlock x:Name="text" Text="{TemplateBinding Content}"
-                                       VerticalAlignment="Center" HorizontalAlignment="Center" Margin="3"
+                                       VerticalAlignment="Center" HorizontalAlignment="Center" Margin="3 0 3 0"
                                        Foreground="White" FontSize="12"></TextBlock>
                         </Border>
                     </Grid>
