--- a/LFProject/LF.SerialCommunication.Project/MainWindow.xaml
+++ b/LFProject/LF.SerialCommunication.Project/MainWindow.xaml
@@ -53,7 +53,7 @@
                 <RowDefinition Height="32" />
             </Grid.RowDefinitions>
             <RichTextBox x:Name="RtbRece" BorderBrush="{StaticResource LineColor}" IsReadOnly="True"
-                         Padding="3">
+                         Padding="3" VerticalScrollBarVisibility="Auto">
             </RichTextBox>
             <Border Grid.Row="1" Margin="0" BorderBrush="{StaticResource LineColor}" BorderThickness="1 0 1 1" Background="White">
                 <Grid>
@@ -65,15 +65,16 @@
                         <RadioButton Content="HEX" VerticalAlignment="Center" Margin="3 0 3 0" IsChecked="True"></RadioButton>
                         <RadioButton Content="TEXT" VerticalAlignment="Center" Margin="0 0 3 0"></RadioButton>
                         <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
-                        <CheckBox Content="显示时间" VerticalAlignment="Center" Margin="3 0 3 0"></CheckBox>
-                        <CheckBox Content="显示发送" VerticalAlignment="Center" Margin="0 0 3 0"></CheckBox>
+                        <CheckBox Content="显示时间" VerticalAlignment="Center" Margin="3 0 3 0" IsChecked="{Binding IsShowTime}"></CheckBox>
+                        <CheckBox x:Name="CkbShowSend" Content="显示发送" VerticalAlignment="Center" Margin="0 0 3 0"
+                                  IsChecked="{Binding IsShowSend}"></CheckBox>
                         <CheckBox Content="自动换行" VerticalAlignment="Center" Margin="0 0 3 0"></CheckBox>
                         <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
                     </StackPanel>
                     <Button x:Name="BtnClear" Content="清屏" Grid.Column="1" Margin="3 0 3 0" Width="60" HorizontalAlignment="Right" Click="BtnClear_Click"></Button>
                 </Grid>
             </Border>
-            <RichTextBox Grid.Row="2" Margin="0 5 0 0" BorderBrush="{StaticResource LineColor}" Padding="3"></RichTextBox>
+            <RichTextBox x:Name="RtbSend" Grid.Row="2" Margin="0 5 0 0" BorderBrush="{StaticResource LineColor}" Padding="3"></RichTextBox>
             <Border Grid.Row="3" BorderBrush="{StaticResource LineColor}" BorderThickness="1 0 1 1" Background="White">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -81,15 +82,15 @@
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <StackPanel Orientation="Horizontal">
-                        <RadioButton Content="HEX" VerticalAlignment="Center" Margin="3 0 3 0" IsChecked="True"></RadioButton>
-                        <RadioButton Content="TEXT" VerticalAlignment="Center" Margin="0 0 3 0"></RadioButton>
+                        <RadioButton x:Name="RbnSendHex" Content="HEX" VerticalAlignment="Center" Margin="3 0 3 0" IsChecked="{Binding IsSendHex}"></RadioButton>
+                        <RadioButton x:Name="RbnSendText" Content="TEXT" VerticalAlignment="Center" Margin="0 0 3 0"></RadioButton>
                         <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
                         <CheckBox x:Name="CkbAutoSend" Content="自动发送" VerticalAlignment="Center" Margin="3 0 3 0"></CheckBox>
                         <TextBox Text="100" VerticalAlignment="Center" Width="50" Margin="0 0 3 0" IsEnabled="{Binding ElementName=CkbAutoSend, Path=IsChecked}"></TextBox>
                         <TextBlock Text="ms" VerticalAlignment="Center" Margin="0 0 3 0"></TextBlock>
                         <Rectangle Width="1" Fill="{StaticResource LineColor}"></Rectangle>
                     </StackPanel>
-                    <Button Content="发送" Grid.Column="1" Margin="3 0 3 0" Width="60" HorizontalAlignment="Right"></Button>
+                    <Button Name="BtnSend" Content="发送" Grid.Column="1" Margin="3 0 3 0" Width="60" HorizontalAlignment="Right" Click="BtnSend_Click"></Button>
 
                 </Grid>
             </Border>
@@ -97,7 +98,7 @@
         <Border Grid.Row="3" Background="{StaticResource BackColor}" BorderBrush="{StaticResource LineColor}" BorderThickness="0 1 0 0">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="已发送" VerticalAlignment="Center" Margin="8 0 3 0"></TextBlock>
-                <TextBlock Text="{Binding SendCound}" VerticalAlignment="Center" Margin="0 0 3 0" Foreground="{StaticResource MainColor}"></TextBlock>
+                <TextBlock Text="{Binding SendCount}" VerticalAlignment="Center" Margin="0 0 3 0" Foreground="{StaticResource MainColor}"></TextBlock>
                 <TextBlock Text="bits" VerticalAlignment="Center" Margin="0 0 3 0"></TextBlock>
                 <TextBlock Text="已接收" VerticalAlignment="Center" Margin="8 0 3 0"></TextBlock>
                 <TextBlock Text="{Binding ReceCount}" VerticalAlignment="Center" Margin="0 0 3 0" Foreground="{StaticResource MainColor}"></TextBlock>
@@ -107,8 +108,6 @@
                 <TextBlock Text="0" VerticalAlignment="Center" Margin="0 0 3 0" Foreground="{StaticResource MainColor}"></TextBlock>
                 <TextBlock Text="s" VerticalAlignment="Center" Margin="0 0 3 0"></TextBlock>
             </StackPanel>
-
         </Border>
-
     </Grid>
 </Window>
